# auto_trade

./: .env.template  .gitignore  Dockerfile  README.md  VALIDATION_PROTOCOL.md  check_api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_ibkr.py  test_ob.py
backend/: Dockerfile  main.py  pyproject.toml  reset_sim.py
backend/src/: events.py  websocket_server.py
backend/src/api/: app.py
backend/src/core/: config.py  security.py
backend/src/database/: __init__.py  connection.py
backend/src/engine/: __init__.py  adaptive_controller.py  backtester.py  circuit_breaker.py  friction_guard.py  risk_manager.py  supervisor.py
backend/src/feeders/: __init__.py  alpaca_feeder.py  base.py  binance_feeder.py  binary_arb_feeder.py  connection_manager.py  dydx_feeder.py  forecastex_feeder.py  hyperliquid_feeder.py  ig_feeder.py  limitless_feeder.py  limitless_sports_feeder.py  mock_feeder.py  oanda_feeder.py  polymarket_feeder.py
backend/src/strategy/: __init__.py  base.py  binary_arb_strategy.py  cross_platform_arb.py  lead_lag_arbitrage.py  maker_rewards_strategy.py  market_pairs.py  negrisk_strategy.py  polymarket_spot_arb.py  sports_arb.py
backend/tests/: test_adaptive_controller.py  test_arbitrage_strategies.py  test_backtester.py  test_black_scholes.py  test_circuit_breaker.py  test_dydx.py  test_forecastex.py  test_friction_guard.py  test_hyperliquid.py  test_risk_manager.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
frontend/: index.html  package.json
src/: __init__.py  api.py  database.py  engine.py  events.py  security.py  (+1 more)
web/: app.js  (+2 more)
(+30 files in other folders)
