[project]
name = "auto-trade-backend"
version = "0.2.0"
description = "Backend modular de trading event-driven en FastAPI y PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "trading-ig>=0.0.1",
    "alpaca-py>=0.43.4",
    "websockets>=16.0",
    "cryptography>=49.0.0",
    "limitless-sdk>=1.0.12",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
